Add possibility to register, login, logout

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -9,4 +9,13 @@ html
     = csrf_meta_tags
 
   body
-    = yield
+    = render 'layouts/shared/header'
+    .container
+      - if notice
+        .alert.alert-info
+          = notice
+      - if alert
+        .alert.alert-warning
+          = alert
+      = yield
+      = render 'layouts/shared/footer'
