--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -1,24 +1,24 @@
+- provide(:title, 'Sign up')
 h2
   | Sign up
 = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
-  = devise_error_messages!
-  .field
+  - if resource.errors.any?
+    .alert.alert-danger
+      = devise_error_messages!
+  .field.form-group
     = f.label :email
-    br
-    = f.email_field :email, autofocus: true
-  .field
+    = f.email_field :email, autofocus: true, class: 'form-control'
+  .field.form-group
     = f.label :password
     - if @minimum_password_length
       em
         | (
         = @minimum_password_length
         |  characters minimum)
-    br
-    = f.password_field :password, autocomplete: "off"
-  .field
+    = f.password_field :password, autocomplete: "off", class: 'form-control'
+  .field.form-group
     = f.label :password_confirmation
-    br
-    = f.password_field :password_confirmation, autocomplete: "off"
-  .actions
-    = f.submit "Sign up"
+    = f.password_field :password_confirmation, autocomplete: "off", class: 'form-control'
+  .actions.form-group
+    = f.submit "Sign up", class: 'btn btn-primary'
 = render "devise/shared/links"
