CRUD for categories. Add possibility for category be a subcategory

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -8,6 +8,16 @@
  */
 
 /* clearfix */
+
+
+th {
+  width: 200px;
+}
+
+td {
+  height: 50px;
+}
+
 .owl-carousel .owl-wrapper:after {
   content: ".";
   display: block;
@@ -1296,6 +1306,85 @@ hr{
 .copyright ul {
   margin-bottom:0;
 }
+
+.panel {
+  border-radius: 0;
+  box-shadow: 0 1px 2px #C3C3C3;
+  color: #8B91A0;
+  margin-top: 20px;
+  border: 1px solid #ddd;
+  box-shadow: 0 1px 1px rgba(0,0,0,.05);
+  background-color: #ffffff;
+  position: relative;
+}
+
+.core-icon {
+  width: 33.3333%;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  position: absolute;
+  text-align: center;
+}
+
+.core-content {
+  margin-left: 33.3333%;
+  min-height: 120px;
+  padding: 20px;
+  h2, h4 {
+    color: #4C4A4A;
+  }
+}
+
+.panel-footer {
+  border: none;
+  padding: 0;
+  text-align: center;
+  a {
+    padding: 15px;
+    text-decoration: none;
+    color: #fff;
+  }
+  a:hover {
+    color: #52514D;
+  }
+}
+
+.partition {
+  padding: 15px;
+  color: #ffffff;
+  .glyphicon {
+    margin-top: 25px;
+    font-size: 4em;
+    color: rgba(255, 255, 255, 0.75);
+  }
+}
+
+.partition-light-blue {
+  background-color: #829AB7;
+}
+
+.partition-blue {
+  background-color: #426C94;
+}
+
+.partition-grey {
+  background-color: #52514D;
+}
+
+.center {
+  text-align: center;
+  a {
+    text-decoration: none;
+    color: inherit;
+  }
+}
+
+.center h1 {
+  margin-bottom: 10px;
+}
+
+
 
 /* Genric Styles Starts */
 
