Add CRUD for products. Fix few bugs

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -26,6 +26,10 @@ td {
   line-height: 0;
   height: 0;
 }
+
+.margin {
+  margin-left: 5px;
+}
 /* display none until init */
 .owl-carousel{
   display: none;
