--- a/app/views/categories/new.html.slim
+++ b/app/views/categories/new.html.slim
@@ -1,4 +1,10 @@
 - provide(:title, 'Add Category')
+
+ol.breadcrumb
+  li
+    = link_to 'Categories', manage_categories_admin_users_path
+  li.active Add
+
 h1 Add Category
 = form_for @category do |f|
   - if @category.errors.any?
@@ -11,6 +17,8 @@ h1 Add Category
     = f.text_field :title, class: 'form-control'
   p
     = f.label :parent_id
+    span.margin
+      = check_box_tag(:parent)
     br
     = f.select(:parent_id) do
       - @parents.each do |c|
